# work-better

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  agent.md  claude.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  ui-preview.html  vite.config.ts  vitest.config.ts  vitest.hooks.config.ts  vitest.integration.config.ts
.claude/: .gitignore  agents.json  settings.template.json
.claude/agents/: chaos-tester-agent.md  checkpoint-manager-agent.md  cost-tracker-agent.md  dev-agent.md  guardian.md  optimizer.md  orchestrator.md  product-reviewer.md  review-agent.md  system-inspector.md  test-agent.md  validator.md  workflow-advisor.md  workflow-runner.md
.codex/: instructions.md
.config/: nextest.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.reports/: codemap-diff.txt
crates/wb-ai/: Cargo.toml
crates/wb-ai/src/: adapter.rs  anthropic.rs  budget.rs  config.rs  lib.rs  openai.rs  router.rs  task_runner.rs
crates/wb-ai/src/prompt/: analyze.rs  classify.rs  extract.rs  mod.rs  summarize.rs
crates/wb-collector/: Cargo.toml
crates/wb-collector/fixtures/: feishu_api_error.json  feishu_api_success.json  lark_message.json  lark_messages_empty.json  lark_messages_response.json  lark_sender.json
crates/wb-collector/src/: collector_task.rs  config.rs  lib.rs  manager.rs  runner.rs  traits.rs
crates/wb-collector/src/feishu/: approvals.rs  bitable.rs  calendar.rs  collector.rs  docs.rs  emails.rs  meetings.rs  messages.rs  minutes.rs  mod.rs  okr.rs  projects.rs  spreadsheets.rs  wiki.rs  wrappers.rs
crates/wb-collector/src/feishu/snapshots/: wb_collector__feishu__messages__tests__lark_message.snap  wb_collector__feishu__messages__tests__lark_messages_empty.snap  wb_collector__feishu__messages__tests__lark_messages_response.snap  wb_collector__feishu__messages__tests__lark_sender.snap
crates/wb-collector/src/system/: app_switch.rs  browser.rs  mod.rs
crates/wb-collector/tests/: contract.rs  feishu_collectors_l2.rs  real_backend_collector_toggle.rs
crates/wb-core/: Cargo.toml
crates/wb-core/bindings/: AttachmentType.ts  Confidence.ts  Event.ts  EventType.ts  Issue.ts  ReviewResult.ts  ReviewVerdict.ts  Task.ts  TaskStatus.ts  WorkRecord.ts
crates/wb-core/src/: audit.rs  error.rs  event.rs  lib.rs  record.rs  task.rs  test_helpers.rs
crates/wb-core/tests/security/: h3_input_boundary.rs  h4_permission.rs  h5_filesystem.rs  mod.rs
crates/wb-processor/: Cargo.toml
crates/wb-processor/src/: audit_pipeline.rs  classifier.rs  extraction.rs  lib.rs  persist.rs  pipeline.rs  pipeline_tests.rs  review.rs  review_rules.rs  reviewer.rs  reviewer_tests.rs  sla.rs
crates/wb-processor/src/paths/: instant.rs  mod.rs
crates/wb-processor/src/report/: annual.rs  confirm.rs  daily.rs  export.rs  mod.rs  monthly.rs  quarterly.rs  semi_annual.rs  sync_feishu.rs  template.rs  weekly.rs
crates/wb-processor/src/task/: create.rs  discovery.rs  discovery_ai.rs  discovery_confirm.rs  discovery_email.rs  discovery_meeting.rs  discovery_message.rs  hierarchy.rs  lifecycle.rs  mod.rs  model.rs  sync.rs
crates/wb-processor/tests/: real_backend_task_creation.rs  report_generation_l2.rs  task_discovery_l2.rs
crates/wb-real-backend-tests/: Cargo.toml
crates/wb-real-backend-tests/src/: lib.rs
crates/wb-real-backend-tests/tests/: real_backend.rs
crates/wb-scheduler/: Cargo.toml
crates/wb-scheduler/src/: cron.rs  dependency.rs  lib.rs  log.rs  resource.rs  scheduler.rs  task.rs
crates/wb-scheduler/tests/: real_backend_scheduler_pause.rs  scheduler_tests.rs
crates/wb-storage/: Cargo.toml
crates/wb-storage/bindings/: AuditQueryFilter.ts  AuditSummary.ts  ExecutionLogFilter.ts  ExecutionLogRow.ts  ProcessingAuditRow.ts
crates/wb-storage/src/: config.rs  lib.rs  sync_log.rs
crates/wb-storage/src/freshness/: integrity.rs  mod.rs  quality.rs  report.rs  sync.rs
crates/wb-storage/src/obsidian/: daily.rs  links.rs  mod.rs  project.rs  tags.rs  template.rs  vault.rs  writer.rs
crates/wb-storage/src/sqlite/: audit_log.rs  event_log.rs  mod.rs  schema.rs
crates/wb-storage/src/vector/: embedding.rs  mod.rs  search.rs  store.rs  sync.rs
crates/wb-storage/tests/: acceptance_helpers.rs  freshness.rs  g1_information_collection.rs  g2_intelligent_processing.rs  g3_obsidian_output.rs  g4_task_management.rs  g5_scheduling_system.rs  g6_menu_bar.rs  g7_configuration.rs  manual_capture.rs  obsidian_writer.rs  real_backend_event_processing.rs  real_backend_manual_capture.rs  sqlite_event_log.rs  tauri_collectors.rs  tauri_events.rs  tauri_scheduler.rs  tauri_settings.rs  vector_db.rs
docs/: conventions.md  index.md  rules-installation.md
scripts/: README.md  build-app.sh  build-dmg.sh  build-test.sh  check-docs.sh  clean-dev.sh  create-dev-output.sh  dev.sh  review-agent.sh  run-evals.sh  run-workflow.sh  start-claude-with-agents.sh  sync-types.sh  test-impact.sh  workflow-log-view.sh  workflow-logger.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audit.rs  capture.rs  collect.rs  collectors.rs  db.rs  events.rs  log.rs  mod.rs  notify.rs  scheduler.rs  settings.rs  tasks.rs  test_mode.rs  window.rs
tests/acceptance/: Cargo.toml
tests/acceptance/features/: g1_information_collection.feature  g2_intelligent_processing.feature  g3_data_storage.feature  g4_task_management.feature  g5_report_generation.feature  g6_system_capabilities.feature  g7_cross_cutting.feature  pipeline_scenarios.feature
tests/acceptance/src/: main.rs  world.rs
tests/acceptance/src/steps/: g1_collection.rs  g2_processing.rs  g3_storage.rs  g4_task.rs  g5_report.rs  g6_system.rs  g7_cross_cutting.rs  mod.rs  pipeline_scenarios.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: pipeline_e2e.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: pipeline_integration.rs
(+361 files in other folders)
