[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/wb-core",
    "crates/wb-collector",
    "crates/wb-processor",
    "crates/wb-storage",
    "crates/wb-ai",
    "crates/wb-scheduler",
    "tests/acceptance",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
cucumber = "0.21"

# Testing
rstest = "0.26"
insta = { version = "1", features = ["json", "redactions"] }
tempfile = "3"
httpmock = "0.8"
