[package]
name = "wb-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
wb-core = { path = "../wb-core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
rstest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
