[package]
name = "wb-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
wb-core = { path = "../wb-core" }
async-trait = "0.1"
chrono = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
