[package]
name = "wb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
ts-rs = { version = "10", features = ["chrono-impl", "serde-json-impl"] }

[dev-dependencies]
rstest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
