[package]
name = "wb-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
wb-core = { path = "../wb-core" }
wb-ai = { path = "../wb-ai" }
wb-storage = { path = "../wb-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
