[package]
name = "wb-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
wb-core = { path = "../wb-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
