[package]
name = "wb-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
wb-core = { path = "../wb-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }
cron = "0.13"

[dev-dependencies]
rstest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
