[package]
name = "wb-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
wb-core = { path = "../wb-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
rstest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
wb-collector = { path = "../wb-collector" }
wb-scheduler = { path = "../wb-scheduler" }
wb-processor = { path = "../wb-processor" }
