[package]
name = "wb-acceptance"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "wb-acceptance"
path = "src/main.rs"

[dependencies]
cucumber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
wb-core = { path = "../../crates/wb-core" }
wb-storage = { path = "../../crates/wb-storage" }
wb-collector = { path = "../../crates/wb-collector" }
wb-scheduler = { path = "../../crates/wb-scheduler" }
