[package]
name = "wb-integration"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
async-trait = "0.1"
wb-core = { path = "../../crates/wb-core" }
wb-processor = { path = "../../crates/wb-processor" }
wb-ai = { path = "../../crates/wb-ai" }
